# ghl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
assets/shaders/: basic.vert  phong_default.frag  phong_default.vert
include/ghl/core/: application.hpp
include/ghl/renderer/: window.hpp
include/ghl/utils/: shared.hpp
src/core/: application.cpp
src/ghl/: ghl.hpp
src/ghl/core/: application.cpp  application.hpp  application_layer.hpp  asset_handler.cpp  asset_handler.hpp  debug.cpp  debug.hpp  scene_manager.cpp  scene_manager.hpp
src/ghl/renderer/: comp_systems.cpp  comp_systems.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  renderer_comps.cpp  renderer_comps.hpp  window.cpp  window.hpp
src/ghl/utils/: file_system.cpp  file_system.hpp  utils.hpp
src/ogl/: ogl.hpp
src/ogl/core/: application.cpp  application.hpp  application_layer.hpp  asset_handler.cpp  asset_handler.hpp  debug.cpp  debug.hpp  scene_manager.cpp  scene_manager.hpp
src/ogl/renderer/: pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  renderer_comps.cpp  renderer_comps.hpp  window.cpp  window.hpp
src/ogl/utils/: file_system.cpp  file_system.hpp  utils.hpp
src/renderer/: window.cpp
